[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4.0.0"
user-error = "1.2.8"
colorful = "0.2.1"
rainbow-text = "0.1.5"
