[package]
name = "runner-cli"
version = "0.1.5"
edition = "2021"
authors = ["Pratush Rai"]
description = "A cli tool that let's you map commands to a shorter alias"
license = "MIT"
repository = "https://github.com/pratushrai0309/runner"
keywords = ["cli", "clap", "productivity"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
clap = { version = "4.0.26", features = ["derive"] }
dirs = "4.0.0"
user-error = "1.2.8"
colorful = "0.2.1"
execute = "0.2.11"
inquire = "0.5.2"

[[bin]]
path = "src/main.rs"
name = "runner"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
